fix notice-message spacing on livestream page

--- a/ui/scss/component/_livestream.scss
+++ b/ui/scss/component/_livestream.scss
@@ -16,6 +16,10 @@
     right: 0;
     bottom: 0;
   }
+
+  ~ .notice-message {
+    margin-top: var(--spacing-m);
+  }
 }
 
 .livestream__discussion {
